# deep-thought

./: .gitignore  README.md  go.work
0-deep-thought-uninstrumented/: README.md  docker-compose.yml
0-deep-thought-uninstrumented/answer/: Dockerfile  main.go
0-deep-thought-uninstrumented/answerservice/: go.mod  main.go
0-deep-thought-uninstrumented/frontend/: go.mod  main.go
0-deep-thought-uninstrumented/gatewayservice/: main.go
0-deep-thought-uninstrumented/question/: Dockerfile  go.mod  main.go
0-deep-thought-uninstrumented/questionservice/: Dockerfile  main.go
1-deep-thought-instrumented/: .envrc.example  README.md  docker-compose.yml  go.work  otel-collector-config.yaml
1-deep-thought-instrumented/answer/: main.go
1-deep-thought-instrumented/answerservice/: go.mod  go.sum  main.go
1-deep-thought-instrumented/frontend/: main.go
1-deep-thought-instrumented/gatewayservice/: go.sum  main.go
1-deep-thought-instrumented/question/: main.go
1-deep-thought-instrumented/questionservice/: go.mod  main.go
2-deep-thought-instrumented-manual/: .envrc.example  README.md  docker-compose.yml  otel-collector-config.yaml
2-deep-thought-instrumented-manual/answerservice/: Dockerfile  go.mod  main.go
2-deep-thought-instrumented-manual/gatewayservice/: Dockerfile  main.go
2-deep-thought-instrumented-manual/questionservice/: main.go
python/: docker-compose.yml  otel-collector-config.yaml
python/answer_service/: .flaskenv  Dockerfile  app.py  pyproject.toml
python/question_service/: .flaskenv  Dockerfile  app.py  pyproject.toml
(+4 files in other folders)
